--- a/tinh-ngay.html
+++ b/tinh-ngay.html
@@ -92,7 +92,8 @@
         <div id="clock-container">
             <span id="clock"></span>
         </div>
-        <h1>Máy tính "Ngày Hết Tiền"</h1>
+        <h1>Máy tính</h1>
+	<h1>"Ngày Hết Tiền"</h1>		
 
         <div class="input-group">
             <label for="selectTongTien">Bạn có tổng cộng bao nhiêu tiền?</label>
